syntax = "proto3";

package greet;

option go_package = "github.com/rugggger/go-grpc/greet/proto";


message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
}

message SumRequest {
    int32 a = 1;
    int32 b = 2;
}

message SumResponse {
    int64 result = 1;
}


service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse);
}